# DA-2021

DA_TP_Classes/: CMakeLists.txt
DA_TP_Classes/TP1/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp
DA_TP_Classes/TP2a/: ex1.cpp  ex2.cpp  exercises.h
DA_TP_Classes/TP3a/: ex1.cpp  ex2.cpp
